--- a/.env
+++ b/.env
@@ -1,5 +1,5 @@
 #Pag naay changes diri kay irestart jud ang server.
-NODE_ENV = development
+NODE_ENV = production
 PORT = 5000
 #Naa kay i change diri once gikuha nimo ni nga link sa mongodb
 MONGO_URI = mongodb+srv://danimanabat12:AdDU620170501056875@danicluster.vxthc.mongodb.net/mernapp?retryWrites=true&w=majority
